地区详情页做好了

--- a/pages/country/country.wxml
+++ b/pages/country/country.wxml
@@ -3,7 +3,7 @@
     <import src="../../tpl/searchBox.wxml"/>
     <template is="searchBox" data="{{placeholder: '请输入感兴趣的地区、城市'}}"/>
 
-    <navigator url="../country/country?id={{item.id}}" 
+    <navigator url="../area/area?cid={{country.id}}" 
         class="scroll-view-item" hover-class="navigator-hover">
         <view class="country">
             <image src="{{country.img}}" class="country-icon"></image>
@@ -12,8 +12,8 @@
         </view>
     </navigator>
 
-    <navigator url="../country/country?id={{area.id}}" 
-        wx:for="{{country.children}}" wx:for-item="area"
+    <navigator url="../area/area?aid={{area.id}}&cid={{country.id}}" 
+        wx:for="{{country.children}}" wx:for-item="area" wx:key="id"
         class="scroll-view-item" hover-class="navigator-hover">
         <view class="country area">
             <view class="country-desc desc">{{area.nameCn}} | {{area.nameEn}}</view>
