--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -4,10 +4,10 @@
     <template is="searchBox" data="{{placeholder: '请输入感兴趣的地区、城市'}}"/>
     <scroll-view scroll-y="true" class="scroll-wrapper" 
         style="height: {{winH}}px;">
-        <view class="continent" wx:for="{{items}}">
+        <view class="continent" wx:for="{{items}}" wx:key="id">
             <view class="continent-desc desc">{{item.nameCn}} | {{item.nameEn}}</view>
             <navigator url="../country/country?id={{country.id}}" 
-                wx:for="{{item.children}}" wx:for-item="country"
+                wx:for="{{item.children}}" wx:for-item="country" wx:key="id"
                 class="scroll-view-item" hover-class="navigator-hover">
                 <view class="country">
                     <image src="{{country.img}}" class="country-icon"></image>
