--- a/pages/guide/guide.wxml
+++ b/pages/guide/guide.wxml
@@ -31,7 +31,7 @@
     </view>
     <view class="photos">
         <view class="item" wx:if="{{guide.myPhoto.img}}">
-            <image src="{{imgBase+guide.myPhoto.img}}@720w_1l_80Q" class="pic"></image>
+            <image src="{{imgBase+guide.myPhoto.img}}@720w_277h_1l_1c_1e_80Q" class="pic"></image>
             <view class="info">
                 <view>
                     <text>我的照片</text>
@@ -40,7 +40,7 @@
             </view>
         </view>
         <view class="item" wx:if="{{guide.traveller.img}}">
-            <image src="{{imgBase+guide.traveller.img}}@720w_1l_80Q" class="pic"></image>
+            <image src="{{imgBase+guide.traveller.img}}@720w_277h_1l_1c_1e_80Q" class="pic"></image>
             <view class="info">
                 <view>
                     <text>我和旅行者</text>
@@ -49,7 +49,7 @@
             </view>
         </view>
         <view class="item" wx:if="{{guide.scenery.img}}">
-            <image src="{{imgBase+guide.scenery.img}}@720w_270h_1l_80Q" class="pic"></image>
+            <image src="{{imgBase+guide.scenery.img}}@720w_270h_1l_1c_1e_80Q" class="pic"></image>
             <view class="info">
                 <view>
                     <text>当地风景</text>
@@ -58,7 +58,7 @@
             </view>
         </view>
         <view class="item" wx:if="{{guide.carImg.img}}">
-            <image src="{{imgBase+guide.carImg.img}}@720w_1l_80Q" class="pic"></image>
+            <image src="{{imgBase+guide.carImg.img}}@720w_270h_1l_1c_1e_80Q" class="pic"></image>
             <view class="info">
                 <view>
                     <text>我的车</text>
@@ -89,7 +89,7 @@
             </view>
         </view>
     </view>
-    <view class="recommend">
+    <view class="recommend" wx:if="{{guide.recommends.length > 0}}">
         <view class="sub-title txt">我对当地的推荐</view>
         <view class="desc txt">共{{guide.recommends.length}}个推荐</view>
         <view class="pics">
@@ -131,7 +131,7 @@
             </view>
             <navigator class="link right">查看</navigator>
         </view>
-        <view classs="stats">
+        <view class="stats">
             <view class="stat">
                 <text>接受率</text>
                 <text>{{guide.acceptRate}}</text>
@@ -147,18 +147,25 @@
         </view>
     </view>
     <view class="passport">
-        <view class="user">
-            <image src="{{guide.avatar}}"></image>
-            <text>ID: {{guide.cerId}}</text>
+        <view class="bg-wrap">
+            <image src="../../res/img/logo_acc.png"></image>
+            <image src="../../res/img/passport_{{guide.passport.passImg}}.png"></image>
         </view>
-        <view class="info">
-            <text>姓名: {{guide.name}}</text>
-            <text>手机号码: {{guide.phone}}</text>
-            <text>身份证件: 已通过</text>
-            <text>颁发时间: {{guide.cerDate}}</text>
+        <view class="cert-desc">
+            <view class="user">
+                <image src="{{imgBase+guide.passport.img}}@200h_200w_1c_1e" class="avatar"></image>
+                <text>ID: {{guide.passport.id}}</text>
+            </view>
+            <view class="sep"></view>
+            <view class="info">
+                <text>姓名: {{guide.passport.name}}</text>
+                <text>手机号码: {{guide.passport.phone}}</text>
+                <text>身份证件: {{guide.passport.status}}</text>
+                <text>颁发时间: {{guide.passport.time}}</text>
+            </view>
         </view>
     </view>
     <view>
-        <image src="../../res/img/finished.png"></image>
+        <image src="../../res/img/finished.png" class="finished"></image>
     </view>
 </view>
